2009-07-22  Takeshi Yoshino  <tyoshino@google.com>

Reviewed by Darin Adler.

        VC++ 2005 Express failed to build WebKit due to raw UTF-8 string in WebKit/win/WebCoreLocalizedStrings.cpp
        https://bugs.webkit.org/show_bug.cgi?id=26375

WebKit/win:

        Replace a multiplication sign (U+00D7) encoded in UTF-8 (0xC3 0x97) in WebCoreLocalizedStrings.cpp
        with hex escape sequences.

        VC2005 failed to build due to this raw UTF-8 data in source code. Here's the warning message (
        treated as an error and stopped build).

        WebCoreLocalizedStrings.cpp : warning C4819: The file contains a character that cannot be
        represented in the current code page (932). Save the file in Unicode format to prevent data loss

        A change on WebKitTools/Scripts/extract-localizable-strings is attached to this change not to break
        localized string generation process.

        * WebCoreLocalizedStrings.cpp:
        (WebCore::imageTitle):

WebKitTools:

        Make it able to use hexadecimal escape sequences in .*UI_STRING(_KEY)? macros. Now,
        the extract-localizable-strings script unescapes hexadecimal escape sequences in string literals
        in the macros before writing out them into the file to update.

        By this fix, we can eliminate raw UTF-8 strings in source code while using raw UTF-16 big endian
        strings in the Localizable.strings file.

        Bonus: There's no longer extract-webkit-localizable-strings script. Fix usage message to guide
        users to update-webkit-localizable-strings.

        * Scripts/extract-localizable-strings:

Canonical link: https://commits.webkit.org/37858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46245 268f45cc-cd09-0410-ab3c-d52691b4dbfc